--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "rootDir": "src",
     "outDir": "dist",
-    "strict": true
+    "rootDir": "src",
+    "strict": true,
+    "esModuleInterop": true
   }
 }
+
